--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -30,11 +30,11 @@
         <h2>Login de Administrador</h2>
         <form id="login-form">
           <div class="form-group">
-            <label for="username">Usuário</label>
+            <label for="username">bingaby</label>
             <input type="text" id="username" name="username" required>
           </div>
           <div class="form-group">
-            <label for="password">Senha</label>
+            <label for="password">098457098457</label>
             <input type="password" id="password" name="password" required>
           </div>
           <button type="submit" class="btn-primary">Entrar</button>
