--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -24,23 +24,25 @@
     </div>
   </header>
 
-  <main class="main-content">
-    <div class="container">
-      <section class="admin-login" id="login-section">
-        <h2>Login de Administrador</h2>
-        <form id="login-form">
-          <div class="form-group">
-            <label for="username">bingaby</label>
-            <input type="text" id="username" name="username" required>
-          </div>
-          <div class="form-group">
-            <label for="password">098457098457</label>
-            <input type="password" id="password" name="password" required>
-          </div>
-          <button type="submit" class="btn-primary">Entrar</button>
-          <div id="login-feedback" class="feedback hidden"></div>
-        </form>
-      </section>
+ <main class="main-content">
+  <div class="container">
+    <section class="admin-login" id="login-section">
+      <h2>Login de Administrador</h2>
+      <form id="login-form">
+        <div class="form-group">
+          <label for="username">Usuário</label>
+          <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Senha</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn-primary">Entrar</button>
+        <div id="login-feedback" class="feedback hidden"></div>
+      </form>
+    </section>
+  </div>
+</main>
 
       <div id="admin-panel-content" style="display:none;">
         <section class="admin-form">
