--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centro de Compras - Melhores Ofertas da Internet</title>
+    <meta name="description" content="Centro de Compras - As melhores ofertas e cupons de desconto da internet em um só lugar.">
+    <title>Centro de Compras - Ofertas e Cupons</title>
+
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
 </head>
 <body>
-    <div class="connection-status hidden">
-        <div class="status-content">
-            <span><i class="fas fa-circle"></i> Status da Conexão</span>
-            <small id="status-message">Conectando...</small>
-        </div>
-    </div>
 
-    <header class="main-header">
-        <div class="container">
-            <h1 class="logo">Centro de Compras</h1>
+    <header>
+        <div class="connection-status hidden">
+            <div class="status-content">
+                <span><i class="fas fa-circle"></i> Status da Conexão</span>
+                <small id="status-message">Conectando...</small>
+            </div>
+        </div>
+        <div class="main-header">
+            <a href="/" class="logo">
+                <h1>Centro de Compras</h1>
+            </a>
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Buscar produtos...">
                 <button id="search-btn" class="btn-search"><i class="fas fa-search"></i></button>
@@ -29,82 +33,126 @@
 
     <main class="main-content">
         <div class="container">
-            <aside class="sidebar">
-                <div class="filter-section">
-                    <h3>Filtrar por</h3>
-                    <div class="filter-group">
-                        <label for="filter-category">Categoria</label>
-                        <select id="filter-category" name="categoria">
-                            <option value="todas">Todas</option>
-                            <option value="eletronicos">Eletrônicos</option>
-                            <option value="moda">Moda</option>
-                            <option value="casa">Casa</option>
-                            <option value="beleza">Beleza</option>
-                            <option value="esportes">Esportes</option>
-                            <option value="livros">Livros</option>
-                            <option value="infantil">Infantil</option>
-                            <option value="Celulares">Celulares</option>
-                            <option value="Eletrodomésticos">Eletrodomésticos</option>
-                            <option value="pet">Pet</option>
-                            <option value="jardinagem">Jardinagem</option>
-                            <option value="automotivo">Automotivo</option>
-                            <option value="gastronomia">Gastronomia</option>
-                            <option value="games">Games</option>
-                        </select>
-                    </div>
-                    <div class="filter-group">
-                        <label for="filter-store">Loja</label>
-                        <select id="filter-store" name="loja">
-                            <option value="todas">Todas</option>
-                            <option value="amazon">Amazon</option>
-                            <option value="magalu">Magalu</option>
-                            <option value="shein">Shein</option>
-                            <option value="shopee">Shopee</option>
-                            <option value="mercadolivre">Mercado Livre</option>
-                            <option value="alibaba">Alibaba</option>
-                        </select>
-                    </div>
-                    <div class="filter-group">
-                        <label for="sort-by">Ordenar por</label>
-                        <select id="sort-by" name="sort">
-                            <option value="default">Mais recentes</option>
-                            <option value="price-asc">Menor preço</option>
-                            <option value="price-desc">Maior preço</option>
-                        </select>
-                    </div>
-                    <button id="apply-filters-btn" class="btn-primary">Aplicar Filtros</button>
-                </div>
-            </aside>
+            <nav class="sidebar">
+                <h3>Filtrar por Categoria</h3>
+                <ul class="categorias-lista">
+                    <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list"></i>Todas</li>
+                    <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop"></i>Eletrônicos</li>
+                    <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt"></i>Moda</li>
+                    <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell"></i>Fitness</li>
+                    <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home"></i>Casa</li>
+                    <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic"></i>Beleza</li>
+                    <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol"></i>Esportes</li>
+                    <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book"></i>Livros</li>
+                    <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby"></i>Infantil</li>
+                    <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt"></i>Celulares</li>
+                    <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender"></i>Eletrodomésticos</li>
+                    <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw"></i>Pet</li>
+                    <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf"></i>Jardinagem</li>
+                    <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car"></i>Automotivo</li>
+                    <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils"></i>Gastronomia</li>
+                    <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad"></i>Games</li>
+                </ul>
+            </nav>
             <section class="product-list">
-                <div class="products-grid" id="products-grid"></div>
-                <div class="loading-container" id="loading-spinner">
-                    <div class="loading-spinner">
-                        <div class="spinner"></div>
-                        <p>Carregando produtos...</p>
+                <h2>🛍️ Ofertas do Dia</h2>
+                <div class="lojas-parceiras">
+                    <h3>🌟 Lojas Parceiras</h3>
+                    <div class="grid-lojas">
+                        <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+                        <a href="#" class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+                            <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
+                        </a>
+                        <a href="#" class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+                            <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+                        </a>
+                        <a href="#" class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+                            <img src="logos/shein.png" alt="Logo da Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+                        </a>
+                        <a href="#" class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+                            <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+                        </a>
+                        <a href="#" class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+                            <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+                        </a>
+                        <a href="#" class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+                            <img src="logos/alibaba.png" alt="Logo do Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+                        </a>
                     </div>
                 </div>
-                <div class="empty-state" id="mensagem-vazia" style="display:none;">
-                    <i class="fas fa-box-open empty-icon"></i>
-                    <h3>Nenhum produto encontrado</h3>
-                    <p>Tente ajustar os filtros ou a busca.</p>
+
+                <div class="product-controls">
+                    <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+                    <div id="busca-feedback" class="busca-feedback"></div>
                 </div>
-                <div class="error-state" id="error-message" style="display:none;">
-                    <i class="fas fa-exclamation-circle error-icon"></i>
-                    <h3>Ops! Algo deu errado</h3>
-                    <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
-                    <button class="btn-primary" onclick="fetchProducts()">Tentar Novamente</button>
+
+                <div class="product-display">
+                    <div class="loading-spinner" id="loading-spinner" style="display: none;"></div>
+                    <div class="grid-produtos" id="grid-produtos"></div>
+                    <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+                    <p class="error-message" id="error-message" style="display: none;"></p>
+                    <div class="paginacao" id="paginacao">
+                        <button id="prev-page" disabled>Anterior</button>
+                        <span id="page-info">Página 1</span>
+                        <button id="next-page">Próxima</button>
+                    </div>
                 </div>
             </section>
         </div>
-    </main>
 
-    <div id="product-modal" class="modal">
+        <section class="social-links">
+            <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer" aria-label="Nos siga no TikTok">
+                <div class="icon"><img src="logos/tiktok.png" alt="Logo do TikTok" loading="lazy" width="40" height="40"></div>
+                <span>TikTok</span>
+            </a>
+            <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer" aria-label="Nos siga no Instagram">
+                <div class="icon"><img src="logos/Instagram.png" alt="Logo do Instagram" loading="lazy" width="40" height="40"></div>
+                <span>Instagram</span>
+            </a>
+            <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Nos siga no X (Twitter)">
+                <div class="icon"><img src="logos/X.png" alt="Logo do X (Twitter)" loading="lazy" width="40" height="40"></div>
+                <span>X</span>
+            </a>
+            <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer" aria-label="Nos siga no YouTube">
+                <div class="icon"><img src="logos/youtube.png" alt="Logo do YouTube" loading="lazy" width="40" height="40"></div>
+                <span>YouTube</span>
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco no WhatsApp">
+                📲 WhatsApp
+            </a>
+            <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no Telegram">
+                📢 Telegram
+            </a>
+        </section>
+
+        <div class="robo-assistente">
+            <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer" aria-label="Fale com o Robô Assistente no WhatsApp">
+                <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+                <div class="robo-texto">Posso ajudar?</div>
+            </a>
+        </div>
+    </main>
+    
+    <div class="modal" id="imageModal">
+        <button class="modal-close" onclick="closeModal()" aria-label="Fechar modal">✕</button>
         <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <div id="modal-product-details"></div>
+            <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+            <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
+            <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</button>
+            <div class="carrossel-dots" id="modalCarrosselDots"></div>
         </div>
     </div>
 
-    <script src="main-script.js"></script>
+    <footer>
+        <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+        <div class="credibilidade-nota">
+            <p><strong>Sobre credibilidade:</strong> É importante notar que este site é apenas um portal de descontos e afiliado, não uma loja direta. Ele redireciona para plataformas terceiras. Verifique sempre se o cupom é válido diretamente na loja original, pois promoções podem expirar ou não se aplicar a certos produtos.</p>
+        </div>
+    </footer>
+
+    <script defer src="script.js"></script>
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
