--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -20,31 +20,13 @@
   <header class="main-header">
     <div class="container">
       <h1>Painel Administrativo</h1>
-      <button id="logout-btn" class="btn-secondary" style="display:none;">Sair</button>
     </div>
   </header>
 
- <main class="main-content">
-  <div class="container">
-    <section class="admin-login" id="login-section">
-      <h2>Login de Administrador</h2>
-      <form id="login-form">
-        <div class="form-group">
-          <label for="username">Usuário</label>
-          <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Senha</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit" class="btn-primary">Entrar</button>
-        <div id="login-feedback" class="feedback hidden"></div>
-      </form>
-    </section>
-  </div>
-</main>
-
-      <div id="admin-panel-content" style="display:none;">
+  <main class="main-content">
+    <div class="container">
+      <!-- Seção de login removida -->
+      <div id="admin-panel-content">
         <section class="admin-form">
           <h2>Adicionar/Editar Produto</h2>
           <form id="admin-product-form">
